try to handle animation via gsap

--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -5,3 +5,13 @@ canvas {
   width: 100vw;
   height: 100vh;
 }
+
+
+[name="progress"] {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  z-index: 5000;
+}
