--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,7 @@ block head
 block scripts
   script(defer src='./assets/scripts/home.bundle.js')
 block content
+  input(type="checkbox", name="progress")
   #container
 block footer
   include ../includes/footer.pug
