test 3dText library

--- a/src/pug/pages/barba.pug
+++ b/src/pug/pages/barba.pug
@@ -20,7 +20,7 @@ block head
 block scripts
   script(defer src='./assets/scripts/barba.bundle.js')
 block content
-  h1 barba
+  .hero-text Smart Orange
   a(href="index.html") Index
   a(href="barba-about.html") about
 block footer
