--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -27,6 +27,7 @@ body {
 	line-height: 1.5em;
 	font-family: $default-font;
 	font-size: 14px;
+	min-height: 100vh;
 	// background-color: var(--color-black);
 }
 .page__inner {
